[project]
name = "lingo"
version = "0.1.0"
description = "LINGO Website"
readme = "README.rst"
authors = [
    { name = "Ziyang Liu", email = "Ziyang.Liu@childrens.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = [
  "numpy<2.2",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
